Added property file to properly handle singular and plural